gateway/config/samples/gateway_v1_route proxy.yaml
apiVersion: gateway.cp.ei.telekom.de/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/managed-by: kustomize
    gateway: gateway-sample
    path: foo-proxy-v1
    cp.ei.telekom.de/environment: default
  name: route-sample-proxy
spec:
  gateway:
    name: gateway-sample
    namespace: default
  upstreams:
  - scheme: https
    host: some.other.gateway
    port: 0
    path: /sample/route/v1
    issuer: an.issuer.for.the.other.gateway
    clientId: gateway
    clientSecret: gateway-client-secret
  downstreams:
  - host: localhost
    port: 0
    path: /sample/route/v1/proxy
    issuer: an.iris.issuer.for.this.gateway
